# spell-backend

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: json-rpc-server-rust-ci.yml  rest-server-rust-ci.yml  workspace-tests-and-lints.yml
config/: default.toml  local.toml
entities/: Cargo.toml
entities/src/: api_key.rs  dto.rs  l2.rs  lib.rs  rpc_asset_models.rs  types.rs
interfaces/: Cargo.toml
interfaces/src/: api_key_provider.rs  asset_service.rs  asset_storage.rs  l1_service.rs  l2_storage.rs  lib.rs
json-rpc/: .env.example  Cargo.toml
json-rpc/src/: lib.rs  main.rs
json-rpc/src/config/: app_config.rs  app_context.rs  method_builder.rs  method_registrar.rs  mod.rs  types.rs
json-rpc/src/endpoints/: errors.rs  get_asset.rs  get_nft.rs  health_check.rs  mod.rs  rpc_asset_models.rs  types.rs
json-rpc/src/rpc/: app.rs
json-rpc/src/setup/: app_context.rs  app_setup.rs  method_registrar.rs  mod.rs  types.rs
json-rpc/tests/: get_assets_batch.rs  get_assets_by_creator.rs  get_assets_by_owner.rs  get_single_asset.rs  json_rpc_test.rs
json-rpc/tests/utils/: mod.rs
manual-migrations/: 0001-L2_assets.sql
migrations/: 0001-L2_assets.sql  20240902210348_L2_Assets.down.sql  20240902210348_L2_Assets.up.sql  20241002092547_asset_minting_status.down.sql  20241002092547_asset_minting_status.up.sql
rest-server/: .env.example  Cargo.toml  build.rs  docker-compose.yml
rest-server/src/: lib.rs  main.rs
rest-server/src/auth/: api_key_extractor.rs  mod.rs
rest-server/src/config/: app_config.rs  app_context.rs
rest-server/src/endpoints/: health_check.rs  l2_assets.rs  mod.rs
rest-server/src/infrastructure/: mod.rs
rest-server/src/infrastructure/auth/: api_key_extractor.rs  types.rs
rest-server/src/infrastructure/config/: app_config.rs  app_context.rs  mod.rs
rest-server/src/infrastructure/endpoints/: health_check.rs  l2_assets.rs
rest-server/src/infrastructure/web/: app.rs
rest-server/src/logging/: tracing.rs
rest-server/src/rest/: auth.rs  marshalling.rs  mod.rs  web_app.rs
rest-server/src/rest/endpoints/: health_check.rs  l2_assets.rs
rest-server/src/web/: app.rs
rest-server/tests/: asset_endpoints_test.rs  asset_l1_test.rs  test_app_util.rs
service/: Cargo.toml
service/src/: api_key_provider_service.rs  asset_service_impl.rs  converter.rs  lib.rs
solana-integration/: Cargo.toml
solana-integration/src/: l1_service_solana.rs  lib.rs
sqlx-migrations/: 20240902210348_L2_Assets.down.sql  20240902210348_L2_Assets.up.sql
storage/: Cargo.toml
storage-pg/: Cargo.toml
storage-pg/src/: l2_storage_pg.rs  lib.rs
storage-pg/tests/: db_test.rs
storage/src/: asset_storage_s3.rs  l2_storage.rs  l2_storage_pg.rs  lib.rs
storage/tests/: db_test.rs  metadata_storage_tests.rs
tests/setup/: Cargo.toml
tests/setup/src/: data_gen.rs  lib.rs  pg.rs  s3.rs  test_validator_runner.rs
util/: Cargo.toml
util/src/: base64_encode_decode.rs  config.rs  hd_wallet.rs  lib.rs  nft_json.rs  publickey.rs  str_util.rs
