[workspace]
resolver = "2"
members = [
    "rest-server",
    "interfaces",
    "storage",
    "tests/setup",
    "util",
    "service",
    "entities",
]

[workspace.dependencies]
lazy_static = "1.5"
thiserror = "1.0.40"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

bs58 = "0.5"

futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = ["full", "sync", "tracing"] }

sqlx = { version = "0.6.2", features = [ "runtime-actix-native-tls", "postgres", "macros", "uuid", "chrono", "offline" ] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

regex = "1"

tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber =  { version = "0.3", features = ["env-filter"] }

config = "0.14"

actix-web = "4.9.0"

aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-types = "1.3"
aws-sdk-s3 = "^1.46"

# dotenvy
dotenv = "0.15.0"

solana-sdk = "1.18.22"

testcontainers = "0.21"
testcontainers-modules = "0.9"
# testcontainers = "0.15.0"
# testcontainers-modules = { version = "0.3.2" }

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
