[workspace]
resolver = "2"
members = [
    "json-rpc",
    "rest-server",
    "interfaces",
    "storage",
    "tests/setup",
    "util",
    "service",
    "entities",
]

[workspace.dependencies]
# Tokio ecosystem
tokio = { version = "1", features = ["full", "sync", "tracing"] }


# Database infrastructure
sqlx = { version = "0.6.2", features = [ "runtime-actix-native-tls", "postgres", "macros", "uuid", "chrono", "offline" ] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }


# Serde ecosystem and seryalization tools
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.81"


# Logging
tracing = "0.1.37"
tracing-actix-web = "0.7.2"
tracing-subscriber =  { version = "0.3.16", features = ["env-filter"] }


# HTTP, RPC and Schemas
actix-web = "4.9.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-core = "18.0.0"
schemars = "0.8.6"
utoipa = { version = "4", features = ["actix_extras"] }
jsonpath_lib = "0.3.0"
url = "2.5.2"
mime_guess = "2.0.5"

# Traits
async-trait = "0.1.66"


# Errors, futures, helpers, tools, time, etc...
thiserror = "1.0.40"
futures = "0.3.30"
lazy_static = "1.5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.5"
regex = "1"


# Config and env
config = "0.14"


# Aws
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-types = "1.3"
aws-sdk-s3 = "^1.46"


# Solana
solana-sdk = "1.18.22"


# Testing
testcontainers = "0.21"
testcontainers-modules = "0.9"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
