[package]
name = "json-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
jsonrpc-http-server = { workspace = true }
jsonrpc-core = { workspace = true }
url = { workspace = true }
mime_guess = { workspace = true }

tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
tracing = { workspace = true }

thiserror = { workspace = true }

schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonpath_lib = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

async-trait = { workspace = true }

entities = { path = "../entities"}
util = { path = "../util" }
service = { path = "../service" }
storage = { path = "../storage" }
interfaces = { path = "../interfaces" }
solana-sdk = { workspace = true }

[dev-dependencies]
setup = { path = "../tests/setup" }
