[package]
name = "rest-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = { path = "../entities" }
interfaces = { path = "../interfaces"}
util = { path = "../util" }
service = { path = "../service" }
storage = { path = "../storage" }
solana-integration = { path = "../solana-integration" }

actix-web = { workspace = true }
actix-http = { workspace = true }

tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
tracing = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

tokio = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
bs58 = { workspace = true }

solana-sdk = { workspace = true }

[dev-dependencies]
setup = { path = "../tests/setup" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
mpl-core = { workspace = true }
serial_test = { workspace = true }

[build-dependencies]
which = "6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(skip_solana_tests)'] }