[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
entities = { path = "../entities"}
interfaces = { path = "../interfaces"}
util = { path = "../util"}

anyhow = { workspace = true }
async-trait = { workspace = true }

chrono = { workspace = true }

solana-sdk = { workspace = true }
