[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }

entities = { path = "../entities"}
interfaces = { path = "../interfaces"}
solana-integration = { path = "../solana-integration" }
util = { path = "../util"}

tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

serde_json = { workspace = true }
chrono = { workspace = true }

solana-sdk = { workspace = true }

[dev-dependencies]
setup = { path = "../tests/setup" }

tokio = { workspace = true }
