[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = "3.2.1"
#zeroize = { version = "=1.3", default-features = false }
lazy_static = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

solana-sdk = { workspace = true }
