[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
entities = { path = "../entities" }
lazy_static = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

aws-config = { workspace = true }
aws-types = { workspace = true }
aws-sdk-s3 = { workspace = true }

base64 = { workspace = true }
chrono = { workspace = true }

solana-sdk = { workspace = true }
