[package]
name = "setup"
version = "0.1.0"
edition = "2021"

[dependencies]
entities = { path = "../../entities"}
interfaces = { path = "../../interfaces" }

anyhow = { workspace = true }

rand = "0.8"

testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres", "localstack"]  }

tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }

aws-config = { workspace = true }
aws-types = { workspace = true }
aws-sdk-s3 = { workspace = true }

