[package]
name = "setup"
version = "0.1.0"
edition = "2021"

[dependencies]
entities = { path = "../../entities"}
interfaces = { path = "../../interfaces" }
util = { path = "../../util"}

anyhow = { workspace = true }

rand = "0.8"
base64 = { workspace = true }

testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres", "localstack"]  }

tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }

aws-config = { workspace = true }
aws-types = { workspace = true }
aws-sdk-s3 = { workspace = true }

solana-sdk = { workspace = true }
